fix: spacing in gallery page 2

--- a/src/Styles/Gallery.module.css
+++ b/src/Styles/Gallery.module.css
@@ -20,7 +20,7 @@
 
 .heading {
     padding-inline: 5vw;
-    padding-block: 10vh;
+    margin-block: 5vh;
     width: 100vw;
     height: 5rem;
     display: flex;
